--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,4 @@ a {
 
 }
 
-// considering using some of this https://www.cssfontstack.com/Ubuntu-Mono
+/* considering using some of this https://www.cssfontstack.com/Ubuntu-Mono */
