--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,10 @@ a:hover {
 }
 
 footer {
-    position: relative;
-    bottom: -20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
 }
 
 nav {
