--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ html {
 
 h1 {
     font-weight: 700;
-    padding-right: 16px;
+    padding: 4px;
+    padding-right: 8px;
 }
 
 h1, h2, h3, h4, h5 {
