--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 
 mark {
     color: var(--accent-one);
-    background-color: var(--main-background);
+    background-color: var(--main-foreground);
 }
 
 a, a:visited, a:active {
