--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
     --main-foreground: #171717;
-    --main-background: #e8e8e8;
+    --main-background: #ffffff;
     --accent-one: #ffd23d;
 }
 
@@ -18,6 +18,7 @@ header {
 h1 {
     font-weight: 700;
     padding-right: 8px;
+    font-shadow: 5px 3px var(--accent-one);
 }
 
 h1, h2, h3, h4, h5 {
@@ -35,8 +36,7 @@ body {
 }
 
 mark {
-    color: var(--accent-one);
-    background-color: var(--main-foreground);
+    background-color: transparent;
 }
 
 a, a:visited, a:active {
