--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header {
 h1 {
     font-weight: 700;
     padding-right: 8px;
-    font-shadow: 5px 3px var(--accent-one);
+    text-shadow: 5px 3px var(--accent-one);
 }
 
 h1, h2, h3, h4, h5 {
