--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --main-foreground: #171717;
     --main-background: #ffffff;
+    --test: #509159;
     --accent-one: #ff8b6b;
     --accent-two: #fa674d;
 }
@@ -19,7 +20,7 @@ header {
 h1 {
     font-weight: 700;
     padding-right: 8px;
-    text-shadow: 5px 3px var(--accent-one);
+    text-shadow: 5px 3px var(--test);
 }
 
 h1, h2, h3, h4, h5 {
