--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+html {
+    font-family: "Azeret Mono";
+    margin: 0;
+}
+
+body {
+    min-height: 100vh;
+    border: 1px solid lightgrey;
+    margin-top: 0px;
+    margin-left: 20%;
+    margin-right: 20%;
+    text-align: justify;
+}
+
+h1 {
+    text-align: center;
+    font-weight: 700;
+    padding-right: 8px;
+}
+
+.column1, .column2, .column3 {
+    width: 31.3%;
+    float: left;
+    margin: 1%;
+}
+
 footer {
     background-color: var(--accent-two);
     color: var(--main-background);
@@ -7,4 +33,4 @@ footer {
     padding-top: 0.8rem;
     padding-left: 0.5rem;
     width: 100vw;
-  }
+}
