--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,8 @@ h1 {
     padding-right: 8px;
 }
 
-.column1, .column2, .column3 {
-    width: 31.3%;
-    float: left;
-    margin: 1%;
+p {
+    padding: 16px;
 }
 
 footer {
