--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     margin-top: 0px;
     margin-left: 20%;
     margin-right: 20%;
-    text-align: justify;
+    text-align: left;
 }
 
 h1 {
