--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,34 @@
 html {
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    margin: 0;
+    font-family: sans-serif;
 }
 
 body {
     font-size: 1.1em;
     min-height: 100vh;
-    border: 1px solid #f0f0f0;
-    border-top-color: transparent;
-    border-bottom-color: transparent;
-    border-radius: 4px;
-    margin-top: 0px;
-    margin-left: 15%;
-    margin-right: 15%;
     text-align: left;
 }
 
+header { padding: 45px; border-bottom: 1px solid #222; }
+
+nav { 
+    padding: 45px;
+    float: left;
+}
+
+nav > a {
+    text-decoration-style: none;
+}
+
+ul, li {
+    list-style-type: none;
+    padding: 4px 0px 4px 0px;
+}
+
 h1 {
+    font-size: 12px;
     text-align: center;
     font-weight: 700;
-    font-size: 2.5em;
-    margin-bottom: 0px;
+    font-size: 1.3em;
 }
 
 p {
@@ -28,24 +36,25 @@ p {
     padding-top: 4px;
 }
 
-a, a:visited {
-    color: black;
-    text-decoration-style: wavy;
-        
+.selected {
+    color: #cf2b62 !important;
 }
 
- a:hover {
+a, a:visited {
+    color: black; 
+}
+
+mark {
+    background-color: white;
+}
+
+mark:hover {
      background-color: black;
      color: white;
 }
 
 footer {
-    background-color: var(--accent-two);
-    color: var(--main-background);
-    position: fixed;
-    bottom: 0;
-    height: 2rem;            /* Footer height */
-    padding-top: 0.8rem;
-    padding-left: 0.5rem;
-    width: 100vw;
+    padding: 45px;
+    line-height: 30px;
+    margin-bottom: 15px;
 }
