--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,43 @@ body {
     text-align: left;
 }
 
-header { padding: 45px; border-bottom: 1px solid #222; }
 
-nav { 
-    padding: 45px;
-    float: left;
+
+
+ @media (min-width: 650px) {
+
+    header { padding: 45px; border-bottom: 1px solid #222; }
+
+    nav { 
+        padding: 45px;
+        float: left;
+    }
+
+    nav > a {
+        text-decoration-style: none;
+    }
+
+
+    main {
+        padding-top: 1em;
+    }
+
 }
 
-nav > a {
-    text-decoration-style: none;
+@media (max-width: 650px) {
+
+    nav { 
+        text-align: center;
+    }
+
+
+    main {
+        padding-left: 45px;
+    }
+
 }
+
+
 
 ul, li {
     list-style-type: none;
@@ -30,6 +57,8 @@ h1 {
     font-weight: 700;
     font-size: 1.3em;
 }
+
+
 
 p {
     padding: 16px;
