--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 html {
-    font-family: sans-serif;
+    /* font stack! */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
+    background-color: #fffefe;
     font-size: 1.1em;
     min-height: 100vh;
     text-align: left;
@@ -70,7 +72,7 @@ h1 {
 
 
 p {
-    padding-bottom: 4px;
+    padding-bottom: 2px;
 }
 
 .selected {
