--- a/styles.css
+++ b/styles.css
@@ -1,118 +1,30 @@
 :root {
-    --accent-color: #2f2cff;
+    --accent-color: #ffffff;
+    --background-color: #212142;
 }
 
-html {
+html, body {
     font-family: sans-serif;
-    background-color: #ffffff;
+    background-color: var(--background-color);
     color: var(--accent-color) !important;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
-body {
-    font-size: 1.1em;
-    min-height: 100vh;
-    text-align: left;
+body { 
+    display: table;
 }
 
-
-footer {
-    padding: 45px;
-    line-height: 30px;
-    margin-bottom: 15px;
-}
-
-
- @media (min-width: 650px) {
-
-    header { padding: 45px; border-bottom: 1px solid #222; }
-
-    nav { 
-        padding: 45px;
-        float: left;
-    }
-
-    nav > a {
-        text-decoration-style: none;
-    }
-
-
-    main {
-        padding-top: 48px;
-    }
-
-    main > h1 {
-        position: relative;
-        left: -72px;
-    }
-
-}
-
-@media (max-width: 650px) {
-
-    nav { 
-        text-align: center;
-    }
-
-    main {
-        padding-left: 30px;
-    }
-
-    main > h1 {
-        margin-left: -45px;
-    }
-
-    footer {
-        padding-left: 30px;
-    }
-
-}
-
-
-
-ul, li {
-    list-style-type: none;
-    padding: 4px 0px 4px 0px;
-    font-size: 0.95em;
-}
-
-h1 {
-    font-variant: bold;
-    font-size: 12px;
+.centered {
     text-align: center;
-    font-weight: 700;
-    font-size: 1.3em;
+    display: table-cell;
+    vertical-align: middle;
 }
 
-
-h3 {
-    font-variant: bold;
-    text-align: center;
-    font-weight: 700;
-    font-size: 1em;
-    margin-top: -0.8em;
-}
-
-p {
-    padding-bottom: 4px;
-}
-
-.filtered {
-    filter: sepia(77%) contrast(300%) saturate(500%) hue-rotate(223deg) brightness(83%) contrast(150%);
-}
-
-a, a:visited {
-    color: var(--accent-color);
-}
-
-a:hover {
-    background-color: var(--accent-color);
-    color: white;
+.centered:hover {
     font-style: italic;
-    text-decoration-style: wavy;
-}
-
-hr {
-    border-color: var(--accent-color);
+    color: var(--background-color);
     background-color: var(--accent-color);
-    color: var(--accent-color);
 }
