--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
-:root {
-    --accent-color: #ffffff;
-    --background-color: #212142;
+:root { 
+    --background-color: #ffffff;
+    --accent-color:: #212142;
+}
+
+h1 {
+    font-family: 'Helvetica';
 }
 
 html, body {
-    font-family: sans-serif;
+    font-family: 'IBM Plex Mono';
     background-color: var(--background-color);
     color: var(--accent-color) !important;
     height: 100%;
@@ -13,14 +17,10 @@ html, body {
     width: 100%;
 }
 
-body { 
-    display: table;
-}
-
-.centered {
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .centered-img {
