--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ h1 {
     display: flex;
     flex-flow: row;
     margin-top: 0;
+    margin-bottom: 0;
     padding: 12pt;
     padding-top: 16pt;
     width: 70vw;
@@ -39,8 +40,8 @@ body, html {
 .bio {
     display: flex;
     flex-flow: row;
-    flex: 1;
-    margin-left: 12pt;
+    padding: 1em;
+    margin-bottom: -4px;
 }
 
 .row {
