--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body, html {
 
 .nav {
   background-color: #fff;
-  font-family: 'IBM Plex Mono';
+  /*font-family: 'IBM Plex Mono';*/
   display: flex;
   flex-flow: row;
   padding: 1em;
